Updated X-ray refinement to manage refined parameters within the RefinementModel class